--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
 
 <p title="I'm a tooltip">Mouse over this paragraph, to display the title attribute as a tooltip.</p>
 
+<h2>HTML Buttons</h2>
+<p>HTML buttons are defined with the button tag:</p>
+
+<button>Click me</button>
+
 </body>
 </html>
